etc/Troll/Parser.output
   0  $accept : %entry% $end

   1  Dice : Decls Exp Decls EOF

   2  Decls : Decl Decls
   3        |

   4  Decl : FUNCTION ID LPAR Ids RPAR EQ Exp
   5       | COMPOSITIONAL ID LPAR Exp COMMA IDorUnop COMMA IDorBinop RPAR

   6  IDorUnop : ID
   7           | MINUS
   8           | D
   9           | Z
  10           | SUM
  11           | COUNT
  12           | MIN
  13           | MAX
  14           | MINIMAL
  15           | MAXIMAL
  16           | CHOOSE
  17           | DIFFERENT

  18  IDorBinop : ID
  19            | PLUS
  20            | TIMES
  21            | CONC

  22  Ids : ID
  23      | ID COMMA Ids

  24  Exp : NUM
  25      | ID
  26      | Exp CONC Exp
  27      | CHOOSE Exp
  28      | DIFFERENT Exp
  29      | LBRACE ExpList RBRACE
  30      | Exp PLUS Exp
  31      | Exp MINUS Exp
  32      | Exp TIMES Exp
  33      | Exp DIVIDE Exp
  34      | MINUS Exp
  35      | D Exp
  36      | Z Exp
  37      | SUM Exp
  38      | COUNT Exp
  39      | LEAST Exp Exp
  40      | MIN Exp
  41      | LARGEST Exp Exp
  42      | MAX Exp
  43      | MEDIAN Exp
  44      | MINIMAL Exp
  45      | MAXIMAL Exp
  46      | Exp HASH Exp
  47      | Exp AND Exp
  48      | Exp D Exp
  49      | Exp Z Exp
  50      | Exp EQ Exp
  51      | Exp NEQ Exp
  52      | Exp LT Exp
  53      | Exp GT Exp
  54      | Exp LE Exp
  55      | Exp GE Exp
  56      | Exp DROP Exp
  57      | Exp KEEP Exp
  58      | Exp PICK Exp
  59      | Exp SETMINUS Exp
  60      | Exp DOTDOT Exp
  61      | ID ASSGN Exp SEMI Exp
  62      | ACCUM ID ASSGN Exp WHILE Exp
  63      | ACCUM ID ASSGN Exp UNTIL Exp
  64      | REPEAT ID ASSGN Exp WHILE Exp
  65      | REPEAT ID ASSGN Exp UNTIL Exp
  66      | FOREACH ID IN Exp DO Exp
  67      | IF Exp THEN Exp ELSE Exp
  68      | CALL ID LPAR ExpList2 RPAR
  69      | STRINGS
  70      | SAMPLE Exp
  71      | Exp SAMPLE Exp
  72      | Exp HCONC Exp
  73      | Exp VCONCL Exp
  74      | Exp VCONCR Exp
  75      | Exp VCONCC Exp
  76      | QUESTION REAL
  77      | LPAR Exp RPAR

  78  ExpList :
  79          | ExpList1

  80  ExpList1 : Exp
  81           | Exp COMMA ExpList1

  82  ExpList2 : Exp
  83           | Exp COMMA ExpList2

  84  %entry% : '\001' Dice

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . Dice  (84)
	Decls : .  (3)

	COMPOSITIONAL  shift 3
	FUNCTION  shift 4
	ACCUM  reduce 3
	CALL  reduce 3
	CHOOSE  reduce 3
	COUNT  reduce 3
	D  reduce 3
	DIFFERENT  reduce 3
	FOREACH  reduce 3
	ID  reduce 3
	IF  reduce 3
	LARGEST  reduce 3
	LBRACE  reduce 3
	LEAST  reduce 3
	LPAR  reduce 3
	MAX  reduce 3
	MAXIMAL  reduce 3
	MEDIAN  reduce 3
	MIN  reduce 3
	MINIMAL  reduce 3
	MINUS  reduce 3
	NUM  reduce 3
	QUESTION  reduce 3
	REPEAT  reduce 3
	SAMPLE  reduce 3
	STRINGS  reduce 3
	SUM  reduce 3
	Z  reduce 3

	Dice  goto 5
	Decl  goto 6
	Decls  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Decl : COMPOSITIONAL . ID LPAR Exp COMMA IDorUnop COMMA IDorBinop RPAR  (5)

	ID  shift 8
	.  error


state 4
	Decl : FUNCTION . ID LPAR Ids RPAR EQ Exp  (4)

	ID  shift 9
	.  error


state 5
	%entry% : '\001' Dice .  (84)

	.  reduce 84


state 6
	Decls : Decl . Decls  (2)
	Decls : .  (3)

	COMPOSITIONAL  shift 3
	FUNCTION  shift 4
	ACCUM  reduce 3
	CALL  reduce 3
	CHOOSE  reduce 3
	COUNT  reduce 3
	D  reduce 3
	DIFFERENT  reduce 3
	EOF  reduce 3
	FOREACH  reduce 3
	ID  reduce 3
	IF  reduce 3
	LARGEST  reduce 3
	LBRACE  reduce 3
	LEAST  reduce 3
	LPAR  reduce 3
	MAX  reduce 3
	MAXIMAL  reduce 3
	MEDIAN  reduce 3
	MIN  reduce 3
	MINIMAL  reduce 3
	MINUS  reduce 3
	NUM  reduce 3
	QUESTION  reduce 3
	REPEAT  reduce 3
	SAMPLE  reduce 3
	STRINGS  reduce 3
	SUM  reduce 3
	Z  reduce 3

	Decl  goto 6
	Decls  goto 10


state 7
	Dice : Decls . Exp Decls EOF  (1)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 37


state 8
	Decl : COMPOSITIONAL ID . LPAR Exp COMMA IDorUnop COMMA IDorBinop RPAR  (5)

	LPAR  shift 38
	.  error


state 9
	Decl : FUNCTION ID . LPAR Ids RPAR EQ Exp  (4)

	LPAR  shift 39
	.  error


state 10
	Decls : Decl Decls .  (2)

	.  reduce 2


state 11
	Exp : ACCUM . ID ASSGN Exp WHILE Exp  (62)
	Exp : ACCUM . ID ASSGN Exp UNTIL Exp  (63)

	ID  shift 40
	.  error


state 12
	Exp : CALL . ID LPAR ExpList2 RPAR  (68)

	ID  shift 41
	.  error


state 13
	Exp : CHOOSE . Exp  (27)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 42


state 14
	Exp : COUNT . Exp  (38)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 43


state 15
	Exp : D . Exp  (35)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 44


state 16
	Exp : DIFFERENT . Exp  (28)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 45


state 17
	Exp : FOREACH . ID IN Exp DO Exp  (66)

	ID  shift 46
	.  error


state 18
	Exp : ID .  (25)
	Exp : ID . ASSGN Exp SEMI Exp  (61)

	ASSGN  shift 47
	ACCUM  reduce 25
	AND  reduce 25
	CALL  reduce 25
	CHOOSE  reduce 25
	COMMA  reduce 25
	COMPOSITIONAL  reduce 25
	CONC  reduce 25
	COUNT  reduce 25
	D  reduce 25
	DIFFERENT  reduce 25
	DIVIDE  reduce 25
	DO  reduce 25
	DOTDOT  reduce 25
	DROP  reduce 25
	ELSE  reduce 25
	EOF  reduce 25
	EQ  reduce 25
	FOREACH  reduce 25
	FUNCTION  reduce 25
	GE  reduce 25
	GT  reduce 25
	HASH  reduce 25
	HCONC  reduce 25
	ID  reduce 25
	IF  reduce 25
	KEEP  reduce 25
	LARGEST  reduce 25
	LBRACE  reduce 25
	LE  reduce 25
	LEAST  reduce 25
	LPAR  reduce 25
	LT  reduce 25
	MAX  reduce 25
	MAXIMAL  reduce 25
	MEDIAN  reduce 25
	MIN  reduce 25
	MINIMAL  reduce 25
	MINUS  reduce 25
	NEQ  reduce 25
	NUM  reduce 25
	PICK  reduce 25
	PLUS  reduce 25
	QUESTION  reduce 25
	RBRACE  reduce 25
	REPEAT  reduce 25
	RPAR  reduce 25
	SAMPLE  reduce 25
	SEMI  reduce 25
	SETMINUS  reduce 25
	STRINGS  reduce 25
	SUM  reduce 25
	THEN  reduce 25
	TIMES  reduce 25
	UNTIL  reduce 25
	VCONCC  reduce 25
	VCONCL  reduce 25
	VCONCR  reduce 25
	WHILE  reduce 25
	Z  reduce 25


state 19
	Exp : IF . Exp THEN Exp ELSE Exp  (67)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 48


state 20
	Exp : LARGEST . Exp Exp  (41)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 49


state 21
	Exp : LBRACE . ExpList RBRACE  (29)
	ExpList : .  (78)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	RBRACE  reduce 78

	Exp  goto 50
	ExpList  goto 51
	ExpList1  goto 52


state 22
	Exp : LEAST . Exp Exp  (39)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 53


state 23
	Exp : LPAR . Exp RPAR  (77)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 54


state 24
	Exp : MAX . Exp  (42)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 55


state 25
	Exp : MAXIMAL . Exp  (45)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 56


state 26
	Exp : MEDIAN . Exp  (43)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 57


state 27
	Exp : MIN . Exp  (40)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 58


state 28
	Exp : MINIMAL . Exp  (44)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 59


state 29
	Exp : MINUS . Exp  (34)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 60


state 30
	Exp : NUM .  (24)

	.  reduce 24


state 31
	Exp : QUESTION . REAL  (76)

	REAL  shift 61
	.  error


state 32
	Exp : REPEAT . ID ASSGN Exp WHILE Exp  (64)
	Exp : REPEAT . ID ASSGN Exp UNTIL Exp  (65)

	ID  shift 62
	.  error


state 33
	Exp : SAMPLE . Exp  (70)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 63


state 34
	Exp : STRINGS .  (69)

	.  reduce 69


state 35
	Exp : SUM . Exp  (37)

	ACCUM  shift 11
	CALL  shift 12
	CHOOSE  shift 13
	COUNT  shift 14
	D  shift 15
	DIFFERENT  shift 16
	FOREACH  shift 17
	ID  shift 18
	IF  shift 19
	LARGEST  shift 20
	LBRACE  shift 21
	LEAST  shift 22
	LPAR  shift 23
	MAX  shift 24
	MAXIMAL  shift 25
	MEDIAN  shift 26
	MIN  shift 27
	MINIMAL  shift 28
	MINUS  shift 29
	NUM  shift 30
	QUESTION  shift 31
	REPEAT  shift 32
	SAMPLE  shift 33
	STRINGS  shift 34
	SUM  shift 35
	Z  shift 36
	.  error

	Exp  goto 64


state 36
	Exp : Z . Exp  (36)
